No more strikethrough on hover for the links, apparently it makes the whole website impossible to comprehend and caused an outbreak of coronavirus in Iceland

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,11 +43,11 @@ a {
     }
 
     &:hover {
-        text-decoration: line-through;
+        text-decoration: none;
     }
 
     &.github {
-        color: #24292e;
+        color: rgb(36, 41, 46);
     }
 
     &.reddit {
